--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <tr>
     <td>1</td>
     <td>Git Assignment 1 and pull request of Assignment 2</td>
-    <td><button type="button" style="background-color:blueviolet; border:none; text-decoration:none;"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A1_ReezaM/pull/1" target="_blank">View Demo</a></button></td>
-    <td><button type="button" style="background:peru; border:none; text-decoration:none;"><a href="#bottom" target="_blank">View Code</a></button></td>
+    <td><button type="button" style="background-color:blueviolet; border:none; text-decoration:none;"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A1_ReezaM/pull/1" target="_blank" style="text-decoration:none;">View Demo</a></button></td>
+    <td><button type="button" style="background:peru; border:none;"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A1_ReezaM/tree/dev" target="_blank" style="text-decoration:none;" >View Code</a></button></td>
   </tr>
 </table>
 </body>
