--- a/index.html
+++ b/index.html
@@ -19,7 +19,98 @@
    
 
 <table style="width:70%; text-align: center" >
+  <tr style="background-color<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cssland.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+    <h2>Reeza Maharjan -A4</h2>
+     
+<table>
   <tr style="background-color:rgba(1, 152, 121, 2); color:whitesmoke;">
+    <th>#</th>
+    <th>Title</th>
+    <th>Demo</th>
+    <th>Code </th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>Git Assignment 1 and pull request of Assignment 2</td>
+    <td><button type="button" class="demo"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A1_ReezaM/pull/1" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A1_ReezaM/tree/dev" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>Design Assignment 2: 1-A Home-Search (Layout)</td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>Design Assignment 3: 1-A Home-Search (HTML and CSS)</td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>4</td>
+    <td>Design Assignment 4: 1-A Home-Search Responsive (HTML and CSS)</td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>5</td>
+    <td>Design Assignment 5: Design Final Assignment: Responsive </td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>6</td>
+    <td>JS Assignment 6: JS Console Assignments </td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>7</td>
+    <td>JS Assignment 7: JS DOM Assignments (Plotting Points)</td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>8</td>
+    <td>JS Assignment 8: JS DOM Assignments (Bouncing Ball)</td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>9</td>
+    <td>JS Assignment 9: JS Carousel (Responsive)</td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>10</td>
+    <td>JS Assignment 10: Box Collision</td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+  <tr>
+    <td>11</td>
+    <td>JS Assignment 11: Ant Smasher</td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>
+</table>
+</body>
+</html>:rgba(1, 152, 121, 2); color:whitesmoke;">
     <td>#</td>
     <td>Title</td>
     <td>Demo</td>
