--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <tr>
     <td>2</td>
     <td>Design Assignment 2: 1-A Home-Search (Layout)</td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A1_Webpage/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A1_Webpage" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>3</td>
