--- a/index.html
+++ b/index.html
@@ -39,18 +39,19 @@
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrpg_A2_Webpage/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrpg_A2_Webpage" target="_blank">View Code</a></button></td>
   </tr>
-<!--   <tr>
+ <tr>
     <td>4</td>
-    <td>Design Assignment 4: 1-A Home-Search Responsive (HTML and CSS)</td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+    <td>Design Assignment 4: Convert float layout into flex in Assignment 2</td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A3_Webpages/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A3_Webpages" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>5</td>
-    <td>Design Assignment 5: Design Final Assignment: Responsive </td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+    <td>Design Assignment 5: Convert Homepage from provided figma file into HTML </td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A4_Webpage/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A4_Webpage" target="_blank">View Code</a></button></td>
   </tr>
+  <!--  
   <tr>
     <td>6</td>
     <td>JS Assignment 6: JS Console Assignments </td>
