--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   </tr>
   <tr>
     <td>2</td>
-    <td>Design Assignment 2: 1-A Home-Search (Layout)</td>
+    <td>Design Assignment 2: Lo-Fi of Favorite Website and a blog post using html tags</td>
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A1_Webpage/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A1_Webpage" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>3</td>
-    <td>Design Assignment 3: 1-A Home-Search (HTML and CSS)</td>
+    <td>Design Assignment 3: Add CSS to Assignment 1 blog post </td>
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrpg_A2_Webpage/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrpg_A2_Webpage" target="_blank">View Code</a></button></td>
   </tr>
@@ -54,40 +54,46 @@
   <!--  
   <tr>
     <td>6</td>
-    <td>JS Assignment 6: JS Console Assignments </td>
+    <td>JS Assignment 6: Responsive HTML/CSS conversion of Assignment 4 </td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>7</td>
-    <td>JS Assignment 7: JS DOM Assignments (Plotting Points)</td>
+    <td>JS Assignment 7: Final design assignment</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>8</td>
-    <td>JS Assignment 8: JS DOM Assignments (Bouncing Ball)</td>
+    <td>JS Assignment 8: Box Collision</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>9</td>
-    <td>JS Assignment 9: JS Carousel (Responsive)</td>
+    <td>JS Assignment 9: Image Carousel</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>10</td>
-    <td>JS Assignment 10: Box Collision</td>
+    <td>JS Assignment 10: Car Lane Game</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>11</td>
-    <td>JS Assignment 11: Ant Smasher</td>
+    <td>Flappy Bird</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
-  </tr> -->
+  </tr>
+ <tr>
+    <td>12</td>
+    <td>Helix Animation</td>
+    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+  </tr>-->
 </table>
 </body>
 </html>
