--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A4_Webpage/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A4_Webpage" target="_blank">View Code</a></button></td>
   </tr>
-  <!--  
   <tr>
     <td>6</td>
     <td>JS Assignment 6: Responsive HTML/CSS conversion of Assignment 4 </td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A5_Webpage/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A5_Webpage" target="_blank">View Code</a></button></td>
   </tr>
+  <!--  
   <tr>
     <td>7</td>
     <td>JS Assignment 7: Final design assignment</td>
