--- a/index.html
+++ b/index.html
@@ -53,44 +53,44 @@
   </tr>
   <tr>
     <td>6</td>
-    <td>JS Assignment 6: Responsive HTML/CSS conversion of Assignment 4 </td>
+    <td>Design Assignment 6: Responsive HTML/CSS conversion of Assignment 4 </td>
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A5_Webpage/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A5_Webpage" target="_blank">View Code</a></button></td>
   </tr>
   <!--  
   <tr>
     <td>7</td>
-    <td>JS Assignment 7: Final design assignment</td>
+    <td>Design Assignment 7: Final design assignment</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>8</td>
-    <td>JS Assignment 8: Box Collision</td>
+    <td>Assignment 8: Box Collision</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>9</td>
-    <td>JS Assignment 9: Image Carousel</td>
+    <td>Assignment 9: Image Carousel</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>10</td>
-    <td>JS Assignment 10: Car Lane Game</td>
+    <td>Assignment 10: Car Lane Game</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
     <td>11</td>
-    <td>Flappy Bird</td>
+    <td>Assignment 11: Flappy Bird</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
  <tr>
     <td>12</td>
-    <td>Helix Animation</td>
+    <td>Assignment 12: Helix Animation</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>-->
