--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A5_Webpage/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A5_Webpage" target="_blank">View Code</a></button></td>
   </tr>
-  <!--  
+  
   <tr>
     <td>7</td>
     <td>Design Assignment 7: Final design assignment</td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A6_Webpage/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A6_Webpage" target="_blank">View Code</a></button></td>
   </tr>
+    
+  <!--  
   <tr>
     <td>8</td>
     <td>Assignment 8: Box Collision</td>
