--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A6_Webpage" target="_blank">View Code</a></button></td>
   </tr>
     
-  <!--  
+
   <tr>
     <td>8</td>
-    <td>Assignment 8: Box Collision</td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+    <td>Assignment 8: JS Assignment</td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A7_JS/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A7_JS" target="_blank">View Code</a></button></td>
   </tr>
+  <!--  
   <tr>
     <td>9</td>
     <td>Assignment 9: Image Carousel</td>
