--- a/index.html
+++ b/index.html
@@ -72,13 +72,14 @@
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A7_JS/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A7_JS" target="_blank">View Code</a></button></td>
   </tr>
-  <!--  
+   
   <tr>
     <td>9</td>
     <td>Assignment 9: Image Carousel</td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A8_JS/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A8_JS/settings/pages" target="_blank">View Code</a></button></td>
   </tr>
+  <!--
   <tr>
     <td>10</td>
     <td>Assignment 10: Car Lane Game</td>
