--- a/index.html
+++ b/index.html
@@ -79,22 +79,28 @@
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A8_JS/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A8_JS/settings/pages" target="_blank">View Code</a></button></td>
   </tr>
+    <tr>
+    <td>10</td>
+    <td>Assignment 10: Box Collision</td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A9_MovingBallJS/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A9_MovingBallJS/settings/pages" target="_blank">View Code</a></button></td>
+  </tr>
   <!--
   <tr>
-    <td>10</td>
-    <td>Assignment 10: Car Lane Game</td>
+    <td>11</td>
+    <td>Assignment 11: Car Lane Game</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
   <tr>
-    <td>11</td>
-    <td>Assignment 11: Flappy Bird</td>
+    <td>12</td>
+    <td>Assignment 12: Flappy Bird</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
  <tr>
-    <td>12</td>
-    <td>Assignment 12: Helix Animation</td>
+    <td>13</td>
+    <td>Assignment 13: Helix Animation</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>-->
