--- a/index.html
+++ b/index.html
@@ -91,22 +91,23 @@
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A10_AntSmasherJS/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A10_AntSmasherJS" target="_blank">View Code</a></button></td>
   </tr>
-  <!--
-  <tr>
-    <td>11</td>
-    <td>Assignment 11: Car Lane Game</td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
-  </tr>
+  
   <tr>
     <td>12</td>
-    <td>Assignment 12: Flappy Bird</td>
+    <td>Assignment 12: Car Lane Game</td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A11_CarLaneGame/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A11_CarLaneGame/settings/pages" target="_blank">View Code</a></button></td>
+  </tr>
+  <!--
+  <tr>
+    <td>13</td>
+    <td>Assignment 13: Flappy Bird</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>
  <tr>
-    <td>13</td>
-    <td>Assignment 13: Helix Animation</td>
+    <td>14</td>
+    <td>Assignment 14: Helix Animation</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
   </tr>-->
