--- a/index.html
+++ b/index.html
@@ -98,19 +98,18 @@
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A11_CarLaneGame/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A11_CarLaneGame" target="_blank">View Code</a></button></td>
   </tr>
-  <!--
   <tr>
     <td>13</td>
     <td>Assignment 13: Flappy Bird</td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A12_FlappyBird/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A12_FlappyBird" target="_blank">View Code</a></button></td>
   </tr>
- <tr>
-    <td>14</td>
-    <td>Assignment 14: Helix Animation</td>
+ <!-- <tr>
+    <td>15</td>
+    <td>Assignment 14: Final Assignment</td>
     <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
-  </tr>-->
+  </tr> -->
 </table>
 </body>
 </html>
