--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
     <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_A12_FlappyBird/" target="_blank">View Demo</a></button></td>
     <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_A12_FlappyBird" target="_blank">View Code</a></button></td>
   </tr>
- <!-- <tr>
+ <tr>
     <td>15</td>
     <td>Assignment 14: Final Assignment</td>
-    <td><button type="button" class="demo"><a href="#a" target="_blank">View Demo</a></button></td>
-    <td><button type="button" class="code"><a href="#a" target="_blank">View Code</a></button></td>
-  </tr> -->
+    <td><button type="button" class="demo"><a href="https://reezamaharjan5.github.io/Leapfrog_OceanGuard/" target="_blank">View Demo</a></button></td>
+    <td><button type="button" class="code"><a href="https://github.com/ReezaMaharjan5/Leapfrog_OceanGuard" target="_blank">View Code</a></button></td>
+  </tr>
 </table>
 </body>
 </html>
